<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blur_background"
    tools:context=".LocationsActivity">

    <TextView
        android:id="@+id/txt_select_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_90sdp"
        android:fontFamily="@font/cubao_regular"
        android:gravity="center_vertical"
        android:text="@string/selectLocation_text"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sdp"
        android:shadowColor="#000000"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Horizontal Guideline (top margin) -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintGuide_begin="@dimen/_95sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <!-- House FrameLayout -->
        <FrameLayout
            android:id="@+id/frame_house"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_130sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_1sdp"
            app:layout_constraintEnd_toStartOf="@+id/frame_backyard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_top">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/house_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_1sdp"
                android:scaleType="fitCenter"
                android:src="@drawable/location_house"
                app:shapeAppearanceOverlay="@style/image_cornered_main"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <View
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_130sdp"
                android:background="@drawable/image_round"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </FrameLayout>

        <TextView
            android:id="@+id/txt_house"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_45sdp"
            android:fontFamily="@font/cubao_regular"
            android:gravity="center"
            android:shadowColor="#000000"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="4"
            android:text="@string/house_text"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frame_house" />

        <!-- Backyard FrameLayout -->
        <FrameLayout
            android:id="@+id/frame_backyard"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_130sdp"
            android:layout_marginEnd="@dimen/_1sdp"
            app:layout_constraintEnd_toStartOf="@+id/frame_forest"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/frame_house"
            app:layout_constraintTop_toBottomOf="@id/guideline_top">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/backyard_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_1sdp"
                android:scaleType="fitCenter"
                android:src="@drawable/location_backyard"
                app:shapeAppearanceOverlay="@style/image_cornered_main"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <View
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_130sdp"
                android:background="@drawable/image_round"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </FrameLayout>

        <TextView
            android:id="@+id/txt_backyard"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_45sdp"
            android:fontFamily="@font/cubao_regular"
            android:gravity="center"
            android:shadowColor="#000000"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="4"
            android:text="@string/backyard_text"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.356"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frame_backyard" />

        <!-- Forest FrameLayout -->
        <FrameLayout
            android:id="@+id/frame_forest"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_130sdp"
            android:layout_marginEnd="@dimen/_1sdp"
            app:layout_constraintEnd_toStartOf="@+id/frame_beach"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/frame_backyard"
            app:layout_constraintTop_toBottomOf="@id/guideline_top">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/forest_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_1sdp"
                android:scaleType="fitCenter"
                android:src="@drawable/location_forest"
                app:shapeAppearanceOverlay="@style/image_cornered_main"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <View
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_130sdp"
                android:background="@drawable/image_round"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </FrameLayout>

        <TextView
            android:id="@+id/txt_forest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_45sdp"
            android:fontFamily="@font/cubao_regular"
            android:gravity="center"
            android:shadowColor="#000000"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="4"
            android:text="@string/forest_text"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.64"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frame_forest" />

        <!-- Beach FrameLayout -->
        <FrameLayout
            android:id="@+id/frame_beach"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_130sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/frame_forest"
            app:layout_constraintTop_toBottomOf="@id/guideline_top">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/beach_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_1sdp"
                android:scaleType="fitCenter"
                android:src="@drawable/location_beach"
                app:shapeAppearanceOverlay="@style/image_cornered_main"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <View
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_130sdp"
                android:background="@drawable/image_round"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </FrameLayout>

        <TextView
            android:id="@+id/txt_beach"
            android:layout_width="@dimen/_158sdp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_9sdp"
            android:layout_marginBottom="@dimen/_45sdp"
            android:ellipsize="end"
            android:fontFamily="@font/cubao_regular"
            android:gravity="center"
            android:layoutDirection="ltr"
            android:shadowColor="#000000"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="4"
            android:singleLine="true"
            android:text="@string/beach_text"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.963"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frame_beach" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/exit_button_location1"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_95sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_119sdp"
        android:background="@color/transparent"
        android:padding="@dimen/_1sdp"
        android:scaleType="fitCenter"
        android:src="@drawable/exit"
        android:contentDescription="@string/exit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.979"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

</androidx.constraintlayout.widget.ConstraintLayout>